# cargo-crev

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .travis.yml  .treefmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  HACKING.md  README.md  SECURITY.md  appveyor.yml  flake.nix  justfile  release.toml  rustfmt.toml  shell.nix
.art/: settings.toml
.config/flakebox/: id
.config/selfci/: .gitignore  ci.sh  ci.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cargo.yml  ci-nix.yml  ci.yml  release.yml
cargo-crev/: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
cargo-crev/src/: ai-review-loop-iteration.md  crates_io.rs  creds.rs  deps.rs  dyn_proof.rs  edit.rs  info.rs  known_cargo_owners_defaults.txt  known_cargo_owners_header.txt  lib.rs  main.rs  opts.rs  prelude.rs  repo.rs  review.rs  shared.rs  table.rs  term.rs  tokei.rs  unsorted_mess.rs  util.rs  verify_deps.rs  wot.rs
cargo-crev/src/dep/: computer.rs  dep.rs  mod.rs  print_term.rs
cargo-crev/src/doc/: advisories.md  cargo_specific.md  compiling.md  getting_started.md  glossary.md  mod.rs  organizations.md  tips_and_tricks.md  trust.md
cargo-crev/src/tui/: mod.rs  table_view.rs  user_events.rs  verify_screen.rs
cargo-crev/tests/: clitest.rs
cargo-trust/: Cargo.toml
cargo-trust/src/: main.rs  opts.rs  prelude.rs
ci/: before_deploy.ps1  before_deploy.sh  build-deb  cargo-out-dir  macos-install-packages  prep_deploy.sh  sha256-releases  test-complete  travis-musl-openssl.sh  ubuntu-install-packages  utils.sh
ci/docker/: README.md
ci/docker/arm-unknown-linux-gnueabihf/: Dockerfile  build
ci/docker/i686-unknown-linux-gnu/: Dockerfile  build
ci/docker/mips64-unknown-linux-gnuabi64/: Dockerfile  build
ci/docker/x86_64-unknown-linux-musl/: Dockerfile  build
crev-bin/: Cargo.toml  rustfmt.toml
crev-bin/src/: main.rs  opts.rs  util.rs
crev-common/: Cargo.toml  README.md
crev-common/src/: blake2b256.rs  convert.rs  fs.rs  lib.rs  rand.rs  result.rs  serde.rs
crev-data/: Cargo.toml  README.md
crev-data/src/: digest.rs  id.rs  level.rs  lib.rs  prelude.rs  tests.rs  url.rs
crev-data/src/proof/: code.rs  content.rs  id.rs  mod.rs  package_info.rs  project.rs  project_info.rs  review.rs  revision.rs  trust.rs  url.rs
crev-data/src/proof/review/: code.rs  mod.rs  package.rs  project.rs
crev-data/src/util/: mod.rs  serde.rs
crev-lib/: Cargo.toml  README.md  rustfmt.toml
crev-lib/rc/doc/: README.md  README_USING_THIS_REPO.md  editing-code-review.md  editing-package-review.md  editing-project-review.md  editing-trust.md
crev-lib/src/: activity.rs  github.rs  id.rs  lib.rs  local.rs  prelude.rs  proof.rs  proofdb.rs  recursive_digest.rs  tests.rs  trust_graph.rs  trustdb.rs
crev-lib/src/cli/: mod.rs  opts.rs
crev-lib/src/repo/: mod.rs  staging.rs
crev-lib/src/tests/: issues.rs
crev-lib/src/util/: git.rs  mod.rs
crev-wot/: Cargo.toml
crev-wot/src/: lib.rs  tests.rs  trust_set.rs
crev-wot/src/tests/: issues.rs
crevette/: Cargo.toml  README.md
crevette/src/: lib.rs  vet.rs
crevsum/: Cargo.toml  README.md
crevsum/src/: main.rs  opts.rs
design/: purpose.md
docs/: explanation.md  notes.txt
misc/git-hooks/: commit-msg  pre-commit
rblake2sum/: Cargo.toml  README.md  rustfmt.toml
rblake2sum/src/: main.rs
recursive-digest/: Cargo.toml  README.md  TODO
recursive-digest/src/: lib.rs
recursive-digest/tests/: sanity.rs
skills/: ai-review-loop-iteration.md  ai-review-loop-prep.md
skills/cargo-crev-review/: SKILL.md
src/: id.rs  index.rs  level.rs  local.rs  main.rs  opts.rs  proof.rs  review.rs  tests.rs  trust.rs  trust_graph.rs
src/proof/: mod.rs  review.rs  trust.rs
src/repo/: mod.rs  staging.rs
src/util/: mod.rs  serde.rs
