[workspace]
resolver = "2"
members = [
	"cargo-crev",
	"crev-common",
	"crev-data",
	"crev-wot",
	"crev-lib",
]

[workspace.package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>", "Kornel Lesiński <kornel@geekhood.net>"]
edition = "2021"
license = "MPL-2.0 OR MIT OR Apache-2.0"
repository = "https://github.com/crev-dev/cargo-crev"
rust-version = "1.73"
version = "0.25.6"

[workspace.dependencies]
crev-common = { path = "crev-common", version = "0.25"}
crev-data = { path = "crev-data", version = "0.25.3"}
crev-lib = { path = "crev-lib", version = "0.25.3"}
crev-wot = { path = "crev-wot", version = "0.25" }
chrono = { version = "0.4.28", default-features = false, features = ["std", "clock"] }
blake2 = "0.10.6"
default = "0.1.2"
cargo = "0.76"
git2 = ">=0.17,<0.19"
itertools = "0.12"
log = "0.4.20"
rayon = "1.7.0"
resiter = "0.5"
semver = { version = "1.0.18", features = [ "serde" ] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
thiserror = "1.0.47"
