[workspace]
resolver = "2"
members = ["cargo-crev", "crev-common", "crev-data", "crev-wot", "crev-lib"]
exclude = ["crevette"]

[workspace.package]
authors = [
	"Dawid Ciężarkiewicz <dpc@dpc.pw>",
	"Kornel Lesiński <kornel@geekhood.net>",
]
edition = "2024"
license = "MPL-2.0 OR MIT OR Apache-2.0"
repository = "https://github.com/crev-dev/cargo-crev"
rust-version = "1.92"
version = "0.26.6"

[workspace.dependencies]
crev-common = { path = "crev-common", version = "0.26.6" }
crev-data = { path = "crev-data", version = "0.26.6" }
crev-lib = { path = "crev-lib", version = "0.26.6" }
crev-wot = { path = "crev-wot", version = "0.26.6" }
chrono = { version = "0.4.28", default-features = false, features = [
	"std",
	"clock",
] }
blake2 = "0.10.6"
default = "0.1.2"
cargo = "0.95"
git2 = "0.20"
itertools = "0.14"
log = "0.4.28"
rayon = "1.10.0"
resiter = "0.5"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
thiserror = "2.0"

# Crypto crates are unusably slow without optimizations
[profile.dev.package]
blake2 = { opt-level = 2 }
ed25519-dalek = { opt-level = 2 }
curve25519-dalek = { opt-level = 2 }
sha2 = { opt-level = 2 }
rust-argon2 = { opt-level = 2 }
blake2b_simd = { opt-level = 2 }
constant_time_eq = { opt-level = 2 }

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"
