[package]
name = "cargo-crev"
version = "0.23.3"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>", "Kornel Lesiński <kornel@geekhood.net>"]
categories = ["development-tools::cargo-plugins"]
default-run = "cargo-crev"
description = "Distibuted Code REView system for verifying security and quality of Cargo dependencies"
documentation = "https://docs.rs/cargo-crev"
homepage = "https://github.com/crev-dev/cargo-crev"
keywords = ["code", "review", "tool", "distributed", "security"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/crev-dev/cargo-crev"
edition = "2021"
rust-version = "1.62" # cost of latest cargo

[[bin]]
name = "cargo-crev"
path = "src/main.rs"

[lib]
name = "cargo_crev"
path = "src/lib.rs"

[dependencies]
crev-common = { path = "../crev-common", version = "^0.23.2"}
crev-data = { path = "../crev-data", version = "^0.23.2"}
crev-wot = { path = "../crev-wot", version = "^0.23.2"}
crev-lib = { path = "../crev-lib", version = "^0.23.2"}
anyhow = "1.0.66"
atty = "0.2.14"
cargo = "0.64.0"
cargo-platform = "0.1.2"
crates_io_api = "0.8.0"
crossbeam = "0.8.1"
chrono = { version = "0.4.23", default-features = false }
env_logger = { version = "0.9.3", default-features = false, features = ["termcolor", "atty", "humantime"] }
fnv = "1.0.7"
geiger = "0.4.9"
itertools = "0.10.3"
lazy_static = "1.4.0"
num_cpus = "1.14.0"
petgraph = "0.6.0"
rayon = "1.5.1"
resiter = "0.4.0"
rpassword = "7.1.0"
serde = "1.0.147"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
structopt = "0.3.25"
time = "0.3.17"
tokei = "12.1.2"
walkdir = "2.3.2"
openssl-sys = "0.9.77"
git2 = ">=0.13, <0.16"
tempfile = "3.3.0"
rprompt = "1.0.5"
thiserror = "1.0.37"
log = "0.4.17"
term = "0.7.0"
syn-inline-mod = "0.5.0"
quote = "1.0.20"

[features]
default = ["openssl-sys/vendored"]

documentation = []

[package.metadata.docs.rs]
all-features = true


[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n## [Unreleased](https://github.com/crev-dev/cargo-crev/compare/{{tag_name}}...HEAD) - ReleaseDate\n\n", exactly=1},
]
shared-version=true
