[package]
name = "cargo-crev"
version = "0.24.2"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>", "Kornel Lesiński <kornel@geekhood.net>"]
categories = ["development-tools::cargo-plugins"]
default-run = "cargo-crev"
description = "Distibuted Code REView system for verifying security and quality of Cargo dependencies"
documentation = "https://docs.rs/cargo-crev"
homepage = "https://github.com/crev-dev/cargo-crev"
keywords = ["code", "review", "tool", "distributed", "security"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/crev-dev/cargo-crev"
edition = "2021"
rust-version = "1.65" # cost of latest cargo

[[bin]]
name = "cargo-crev"
path = "src/main.rs"

[lib]
name = "cargo_crev"
path = "src/lib.rs"

[dependencies]
crev-common = { path = "../crev-common", version = "^0.24.0"}
crev-data = { path = "../crev-data", version = "^0.24.0"}
crev-wot = { path = "../crev-wot", version = "^0.24.0"}
crev-lib = { path = "../crev-lib", version = "^0.24.2"}
anyhow = "1.0.69"
atty = "0.2.14"
cargo = "0.71.0"
cargo-platform = "0.1.2"
crates_io_api = "0.8.1"
crossbeam = "0.8.2"
chrono = { version = "0.4.23", default-features = false }
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color", "humantime"] }
fnv = "1.0.7"
geiger = "0.4.11"
itertools = "0.10.5"
lazy_static = "1.4.0"
num_cpus = "1.15.0"
petgraph = "0.6.3"
rayon = "1.6.1"
resiter = "0.5.0"
rpassword = "7.2.0"
serde = "1.0.152"
serde_json = "1.0.92"
serde_yaml = "0.9.22"
structopt = "0.3.26"
time = "0.3.17"
tokei = "12.1.2"
walkdir = "2.3.2"
openssl-sys = "0.9.90"
git2 = "0.17"
tempfile = "3.3.0"
rprompt = "2.0.2"
thiserror = "1.0.38"
log = "0.4.17"
term = "0.7.0"
syn-inline-mod = "0.6.0"
quote = "1.0.23"

[features]
default = ["openssl-sys/vendored"]

documentation = []

[package.metadata.docs.rs]
all-features = true


[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n## [Unreleased](https://github.com/crev-dev/cargo-crev/compare/{{tag_name}}...HEAD) - ReleaseDate\n\n", exactly=1},
]
shared-version=true
