[package]
name = "cargo-crev"
categories = ["development-tools::cargo-plugins"]
default-run = "cargo-crev"
description = "Distibuted Code REView system for verifying security and quality of Cargo dependencies"
documentation = "https://docs.rs/cargo-crev"
homepage = "https://github.com/crev-dev/cargo-crev"
keywords = ["code", "review", "supply-chain", "security", "distributed"]
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE-MIT"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "cargo-crev"
path = "src/main.rs"

[lib]
name = "cargo_crev"
path = "src/lib.rs"

[dependencies]
crev-common.workspace = true
crev-data.workspace = true
crev-wot.workspace = true
crev-lib.workspace = true
anyhow = "1.0.93"
atty = "0.2.14"
curl-sys = { version = "0.4", features = ["force-system-lib-on-osx"] }
cargo.workspace = true
cargo-platform = "0.1.3"
crates_io_api = "0.11.0"
crossbeam = "0.8.2"
chrono.workspace = true
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
fnv = "1.0.7"
geiger = "0.4.12"
itertools.workspace = true
lazy_static = "1.4.0"
petgraph = "0.6.4"
rayon = "1.7.0"
resiter = "0.5.0"
rpassword = "7.2.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
structopt = "0.3.26"
time = "0.3.28"
tokei = "13.0.0-alpha.5"
walkdir = "2.3.3"
openssl-sys = "0.9.92"
git2.workspace = true
tempfile = "3.8.0"
rprompt = "2.0.2"
thiserror.workspace = true
log.workspace = true
term = "1.0"
syn-inline-mod = "0.6.0"
quote = "1.0.33"

[features]
default = ["openssl-sys/vendored"]

documentation = []

[package.metadata.docs.rs]
all-features = true


[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n## [Unreleased](https://github.com/crev-dev/cargo-crev/compare/{{tag_name}}...HEAD) - ReleaseDate\n\n", exactly=1},
]
shared-version=true
