cargo-features = ["edition"]

[package]
edition = '2018'
name = "crev-bin"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]

[[bin]]
name = "crev"
path = "src/main.rs"

[dependencies]
failure = "*"
quicli = "*"
rpassword = "*"
rprompt = "*"
structopt = "*"
common_failures = "*"
crev-lib = { path = "../crev-lib" }
crev-data = { path = "../crev-data" }
crev-common = { path = "../crev-common" }
