[package]
edition = '2018'
name = "crev-bin"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]

[[bin]]
name = "crev"
path = "src/main.rs"

[dependencies]
quicli = "0.3"
rpassword = "2"
rprompt = "1"
structopt = "0.2"
crev-lib = { path = "../crev-lib" }
crev-data = { path = "../crev-data" }
crev-common = { path = "../crev-common" }
hex = "0.3"
default = "0.1.2"
