[package]
name = "crev-common"
description = "Scalable, social, Code REView system that we desperately need - common code"
documentation = "https://docs.rs/crev-lib"
keywords = ["code", "review", "trust", "distributed"]
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE-MIT"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
blake2.workspace = true
chrono.workspace = true
hex = "0.4.3"
rprompt = "2.0.2"
serde.workspace = true
serde_yaml.workspace = true
shell-escape = "0.1.5"
thiserror.workspace = true
rand = "0.9.0"

[package.metadata.release]
shared-version = true
