[package]
name = "crev-data"
description = "Scalable, social, Code REView system that we desperately need - data types library"
documentation = "https://docs.rs/crev-lib"
keywords = ["code", "peer", "review", "verification", "dependencies"]
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE-MIT"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
crev-common.workspace = true

chrono.workspace = true
derive_builder = "0.20.0"
rand_v07 = { version = "0.7.3", package = "rand" } # for dalek
ed25519-dalek = "1.0.1"
typed-builder = "0.20"
rand = "0.8.5"
semver.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[package.metadata.release]
shared-version=true
