[package]
name = "crev-lib"
description = "Library interface for programmatic access to crate reviews of cargo-crev"
documentation = "https://docs.rs/crev-lib"
homepage = "https://github.com/crev-dev/cargo-crev"
keywords = ["code", "review", "assessment", "dependency", "assurance"]
categories = ["development-tools", "database"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
crev-common.workspace = true
crev-data.workspace = true
crev-wot.workspace = true

blake2.workspace = true
chrono.workspace = true
crev-recursive-digest = "0.6"
default.workspace = true
directories = { version = "2", package = "directories-next" }
fnv = "1.0.7"
rust-argon2 = "3.0.0"
git2.workspace = true
log = "0.4.20"
resiter.workspace = true
serde.workspace = true
serde_cbor = "0.11.2"
serde_yaml.workspace = true
walkdir = "2.3.3"
thiserror.workspace = true
rayon.workspace = true
aes-siv = "0.7.0"
bstr = "1.6.2"

[package.metadata.release]
shared-version=true
