[package]
name = "crev-wot"
description = "Scalable, social, Code REView system that we desperately need - Web of Trust library"
documentation = "https://docs.rs/cargo-crev"
homepage = "https://github.com/crev-dev/cargo-crev"
keywords = ["web-of-trust", "dependency", "peer", "review", "identity"]
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE-MIT"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
crev-common.workspace = true
crev-data.workspace = true

blake2.workspace = true
chrono.workspace = true
default = "0.1.2"
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
itertools.workspace = true

[package.metadata.release]
shared-version=true
