[package]
name = "crevette"
description = "Converter for using cargo-crev reviews with cargo-vet"
keywords = ["cargo-vet", "crev2vet", "cargo-crev", "supply-chain", "security"]
categories = ["development-tools"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE-MIT"]

[dependencies]
crev-lib.workspace = true
crev-data.workspace = true
crev-wot.workspace = true
semver.workspace = true
serde.workspace = true
toml_edit = { version = "0.19.14", features = ["serde"] }
