[package]
name = "crevette"
description = "Converter for using cargo-crev reviews with cargo-vet"
keywords = ["cargo-vet", "crev2vet", "cargo-crev", "supply-chain", "security"]
categories = ["development-tools"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE-MIT"]

[dependencies]
crev-lib.workspace = true
crev-data.workspace = true
crev-wot.workspace = true
semver.workspace = true
serde.workspace = true
directories-next = "2.0.0"
toml_edit = { version = "0.21.0", features = ["serde"] }
cargo_author = { version = "1.0.6", optional = true }
flate2 = { version = "1.0.28", optional = true }
index-debcargo = { version = "1.1.0", optional = true }
index-guix = { version = "1.0.0", optional = true, path = "../../index-guix" }
reqwest = { version = "0.11.22", features = ["blocking"], optional = true }

[features]
# Ability to export list of crates vetted by Debian
debcargo = ["dep:index-debcargo", "dep:cargo_author", "dep:reqwest", "dep:flate2"]
# Ability to export list of crates included in Guix
guix = ["dep:index-guix"]

[profile.dev.package]
sha1_smol.opt-level = 3
adler.opt-level = 3
miniz_oxide.opt-level = 3
