[package]
name = "crevsum"
version = "0.3.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
edition = "2018"
description = "Recursive digest as calculated by `crev`"
keywords = ["data", "filesystem", "digest", "hash"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/rblake2sum"
homepage = "https://github.com/dpc/crev/tree/master/rblake2sum"
repository = "https://github.com/dpc/crev/tree/master/rblake2sum"
readme = "README.md"

[dependencies]
common_failures = "0.1"
crev-common = { path = "../crev-common", version = "0.7" }
crev-recursive-digest = { path = "../recursive-digest", version = "0.2" }
hex = "0.3"
structopt = "0.2"
