[package]
name = "crev-recursive-digest"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
edition = "2018"
description = "Library implementing recursive digest for filesystem directories"
keywords = ["data", "filesystem", "digest", "hash"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/crev-recursive-digest"
homepage = "https://github.com/dpc/crev/tree/master/recursive-digest"
repository = "https://github.com/dpc/crev/tree/master/recursive-digest"
readme = "README.md"

[dependencies]
walkdir = "2"
blake2 = "0.8"
digest = "0.8"
generic-array = "0.12"

[dev-dependencies]
tempdir = "0.3"
hex = "0.3"
