[package]
edition = "2018"
name = "crev-recursive-digest"
version = "0.2.1"
description = "Library implementing recursive digest for filesystem directories"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
documentation = "https://docs.rs/crev-recursive-digest"
repository = "https://github.com/dpc/crev/tree/master/recursive-digest"
homepage = "https://github.com/dpc/crev/tree/master/recursive-digest"
keywords = ["data", "filesystem", "digest", "hash"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
blake2 = "0.8"
digest = "0.8"
failure = "0.1"
failure_derive = "0.1"
walkdir = "2"

[dev-dependencies]
hex = "0.3"
tempdir = "0.3"
